--- a/Python Basics 2.ipynb
+++ b/Python Basics 2.ipynb
@@ -724,14 +724,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mr. justin in space\n"
+      "oz sason\n"
      ]
     }
    ],
@@ -802,18 +802,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enter your name:mr. justin in space\n",
-      "Hello, mr. justin in space\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = input('enter your name:')\n",
     "print('Hello, ' + x)"
